--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.71.8",
